[package]
name = "rust_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = {version = "1.5", features = ["derive"]}
hex = "0.4.3"
sha2 = "0.10.9"
p256 = {version = "0.13", features = ["ecdsa", "arithmetic"]}
rand_core = "0.6"
ripemd160 = "0.9"
bs58 = "0.4"
serde = {version = "1.0.207", features=["derive"] }
serde_json = "1.0.124"